Git training commit

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -33,7 +33,7 @@
 		<name>LightningComponentBundle</name>
 	</types>
 	<types>
-		<members>*</members>
+		<members>Account.AllAccounts</members>
 		<name>ListView</name>
 	</types>
 	<types>
